<resources>
    <string name="app_name">ProgressTracker</string>
    <string name="empty" />
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="comma">, </string>

    <!--OnBoardingActivity-->
    <string name="label_enter_your_name">Enter your name</string>
    <string name="hint_your_name">Your name</string>
    <string name="label_accept">Accept</string>
    <!--/OnBoardingActivity-->

    <!--MainMenu-->
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="alerts">Alerts</string>
    <string name="profile">Profile</string>
    <!--/MainMenu-->

    <!-- Fragments -->
    <string name="fragment_on_boarding">FragmentOnBoarding</string>
    <string name="fragment_main_container">FragmentMainContainer</string>
    <string name="fragment_home">FragmentHome</string>
    <string name="fragment_statistics">FragmentStatistics</string>
    <string name="fragment_alerts">FragmentAlerts</string>
    <string name="fragment_profile">FragmentProfile</string>
    <string name="fragment_add_ticket">FragmentAddTicket</string>
    <string name="fragment_ticket_details">FragmentTicketDetails</string>
    <string name="fragment_persistence_task_list">FragmentPersistenceTaskList</string>
    <string name="fragment_progress_task_list">FragmentProgressTaskList</string>
    <string name="dialog_select_repeat_option">DialogSelectRepeatOption</string>
    <string name="dialog_select_days">DialogSelectDays</string>
    <string name="dialog_select_ticket_type">DialogSelectTicketType</string>
    <!-- /Fragments -->

    <!-- HomeFragment -->
    <string name="format_user_greeting">Hi, %s</string>
    <!-- /HomeFragment -->

    <!-- StatisticsFragment -->
    <string name="label_persistence">Persistence</string>
    <string name="label_progress">Progress</string>
    <!-- /StatisticsFragment -->

    <!-- FragmentAddTicket -->
    <string name="label_create_ticket">Create New Ticket</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_select_type">Select type</string>
    <string name="label_monday">Monday</string>
    <string name="label_tuesday">Tuesday</string>
    <string name="label_wednesday">Wednesday</string>
    <string name="label_thursday">Thursday</string>
    <string name="label_friday">Friday</string>
    <string name="label_saturday">Saturday</string>
    <string name="label_sunday">Sunday</string>
    <string name="label_repeat_on">Repeat on:</string>

    <string name="error_title_is_empty">Please, enter title</string>
    <string name="error_ticket_type_is_empty">Please, select ticket type</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_type">Type</string>

    <string-array name="array_ticket_types">
        <item>Task</item>
        <item>Progress Tracked Task</item>
    </string-array>
    <!-- /FragmentAddTicket -->

    <!-- FragmentTicketDetails -->
    <string name="label_description">Description</string>
    <string name="label_mark_as_done">Mark as Done</string>
    <!-- /FragmentTicketDetails -->

    <!-- DialogSelectRepeatOptions-->
    <string name="repeat_option_once">Once</string>
    <string name="repeat_option_everyday">Everyday</string>
    <string name="repeat_option_on_work_days">On work days</string>
    <string name="repeat_option_select_days">Select days</string>
    <!-- /DialogSelectRepeatOptions-->

    <!-- DialogSelectTicketType-->
    <string name="ticket_type_task">Task</string>
    <string name="ticket_type_progress_task">Progress Task</string>
    <!-- /DialogSelectTicketType-->

    <!-- DaysAbbreviations-->
    <string name="abbreviation_monday">Mon</string>
    <string name="abbreviation_tuesday">Tues</string>
    <string name="abbreviation_wednesday">Wed</string>
    <string name="abbreviation_thursday">Thurs</string>
    <string name="abbreviation_friday">Fri</string>
    <string name="abbreviation_saturday">Sat</string>
    <string name="abbreviation_sunday">Sun</string>
    <string name="abbreviation_mon_sun">Mon-Sun</string>
    <string name="abbreviation_mon_fri">Mon-Fri</string>
    <string name="label_today">Today</string>
    <string name="progress_label">Progress</string>
    <!-- /DaysAbbreviations-->
</resources>