<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.bielik.progresstracker.view.CheckableItemView
        android:id="@+id/civMonday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkableItemTitle="@string/label_monday" />

    <com.bielik.progresstracker.view.CheckableItemView
        android:id="@+id/civTuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkableItemTitle="@string/label_tuesday" />

    <com.bielik.progresstracker.view.CheckableItemView
        android:id="@+id/civWednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkableItemTitle="@string/label_wednesday" />

    <com.bielik.progresstracker.view.CheckableItemView
        android:id="@+id/civThursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkableItemTitle="@string/label_thursday" />

    <com.bielik.progresstracker.view.CheckableItemView
        android:id="@+id/civFriday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkableItemTitle="@string/label_friday" />

    <com.bielik.progresstracker.view.CheckableItemView
        android:id="@+id/civSaturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkableItemTitle="@string/label_saturday" />

    <com.bielik.progresstracker.view.CheckableItemView
        android:id="@+id/civSunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkableItemTitle="@string/label_sunday" />

</LinearLayout>