<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rect_top_rounded">

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.bielik.progresstracker.view.SelectableItemView
            android:id="@+id/sivOptionOnce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            app:selectableItemTitle="@string/repeat_option_once" />

        <com.bielik.progresstracker.view.SelectableItemView
            android:id="@+id/sivOptionEveryday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectableItemTitle="@string/repeat_option_everyday" />

        <com.bielik.progresstracker.view.SelectableItemView
            android:id="@+id/sivOptionOnWorkDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectableItemTitle="@string/repeat_option_on_work_days" />

        <com.bielik.progresstracker.view.SelectableItemView
            android:id="@+id/sivOptionSelectDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectableItemTitle="@string/repeat_option_select_days" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>