<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bielik.progresstracker.view.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTicketName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:hint="@string/hint_title"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTicketName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTicketDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:hint="@string/hint_description"
                app:layout_constraintTop_toBottomOf="@id/tilTicketName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTicketDescription"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_100"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.bielik.progresstracker.view.OptionView
                android:id="@+id/optionViewType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                app:layout_constraintTop_toBottomOf="@id/tilTicketDescription"
                app:optionTitle="@string/label_type"
                app:optionValue="@string/ticket_type_task" />

            <com.bielik.progresstracker.view.OptionView
                android:id="@+id/optionViewRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/optionViewType"
                app:optionTitle="@string/label_repeat"
                app:optionValue="@string/repeat_option_once" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>