<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingActivity">

    <TextView
        android:id="@+id/enterUserNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/label_enter_your_name"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/enterUserNameEt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameTiEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_your_name"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/accessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryButton"
        android:text="@string/label_accept"
        android:textSize="12sp"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameTil" />

</androidx.constraintlayout.widget.ConstraintLayout>