<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rect_top_rounded">

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/label_repeat"
            android:textAlignment="center"
            android:textColor="?colorOnBackground"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <com.bielik.progresstracker.view.SelectDaysView
            android:id="@+id/selectDaysView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_24"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_24">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_10"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_10"
                android:backgroundTint="?colorPrimaryContainer"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="?colorOnPrimaryContainer"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_10"
                android:backgroundTint="?colorPrimary"
                android:text="@string/ok"
                android:textColor="?colorOnPrimary"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>